--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -601,7 +601,7 @@
 						<td>{{item.name}}</td>
 						<td>{{affliction.name}}</td>
 						<td>
-							{{affliction.level}}
+							{{affliction.skill}}: {{affliction.level}}
 							<label class="fa fa-dice-six rollable" data-level="{{affliction.level}}"
 								   data-label="Casts &lt;b&gt;{{item.name}} {{affliction.name}}&lt;/b&gt;" data-type="skill"></label>
 						</td>
@@ -2890,7 +2890,7 @@
 								<td>
 									<input type="number" name="system.magic.magery" value="{{actor.system.magic.magery}}" placeholder="0" />
 								</td>
-							</tr>
+							</tr>`
 							<tr>
 								<td style="width: 20%">
 									Total Ability
@@ -3148,6 +3148,7 @@
 					</table>
 					{{/if}}
 					<!-- End of Paths block -->
+
 					<!-- Start of Grimoire block -->
 					<h1 class="bold" style="text-align: center;">
 						<label for="rpmGrimoire">
@@ -3163,6 +3164,9 @@
 					<input style="display: none" id="rpmGrimoire" type="checkbox" name="system.rpm.showGrimoire" {{checked actor.system.rpm.showGrimoire}} data-dtype="Boolean"/>
 					{{#if actor.system.rpm.showGrimoire }}
 					<table>
+						<tr>
+							<th colspan="7" style="font-size: larger; text-decoration: underline;">Standard Rituals</th>
+						</tr>
 						<tr>
 							<td class="item-image" style="width: 24px; padding: 0 2px">
 
@@ -3187,9 +3191,185 @@
 							</td>
 						</tr>
 						{{#each items as |item id|}}
-						{{#if (eq type "Ritual")}}
-						{{log item}}
-						<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
+						{{#if (and (eq type "Ritual") (eq system.ritualType "standard")) }}
+						<tr class="item accordion-open" data-item-id="{{item._id}}">
+							<td class="item-image" style="width: 24px; padding: 0 2px">
+								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+							</td>
+							<td class="item-name" style="width: 9em;">
+								{{item.name}}
+							</td>
+							<td class="item-notes">
+								{{item.system.shortNotes}}
+							</td>
+							<td class="item-skill" style="width: 3em; padding-right: 1em;">
+								{{capitalizeFirst item.system.ritualType}}
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								{{item.system.energyCost}}
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								<label for="actor.system.level" class="fa fa-dice-six rollable" data-level="{{item.system.level}}"
+									   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
+								{{item.system.level}}
+							</td>
+							<td class="item-controls" style="width: 30px;">
+								<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+								<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+							</td>
+						</tr>
+						{{/if}}
+						{{/each}}
+					</table>
+
+					<table>
+						<tr>
+							<th colspan="7" style="font-size: larger; text-decoration: underline;">Conditional Rituals</th>
+						</tr>
+						<tr>
+							<td class="item-image" style="width: 24px; padding: 0 2px">
+
+							</td>
+							<td class="item-name" style="width: 9em;">
+								Ritual Name
+							</td>
+							<td class="item-notes">
+								Notes
+							</td>
+							<td class="item-skill" style="width: 3em;">
+								Type
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								Energy Cost
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								Level
+							</td>
+							<td class="item-controls" style="width: 30px;">
+
+							</td>
+						</tr>
+						{{#each items as |item id|}}
+						{{#if (and (eq type "Ritual") (eq system.ritualType "conditional")) }}
+						<tr class="item accordion-open" data-item-id="{{item._id}}">
+							<td class="item-image" style="width: 24px; padding: 0 2px">
+								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+							</td>
+							<td class="item-name" style="width: 9em;">
+								{{item.name}}
+							</td>
+							<td class="item-notes">
+								{{item.system.shortNotes}}
+							</td>
+							<td class="item-skill" style="width: 3em; padding-right: 1em;">
+								{{capitalizeFirst item.system.ritualType}}
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								{{item.system.energyCost}}
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								<label for="actor.system.level" class="fa fa-dice-six rollable" data-level="{{item.system.level}}"
+									   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
+								{{item.system.level}}
+							</td>
+							<td class="item-controls" style="width: 30px;">
+								<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+								<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+							</td>
+						</tr>
+						{{/if}}
+						{{/each}}
+					</table>
+
+					<table>
+						<tr>
+							<th colspan="7" style="font-size: larger; text-decoration: underline;">Charms</th>
+						</tr>
+						<tr>
+							<td class="item-image" style="width: 24px; padding: 0 2px">
+
+							</td>
+							<td class="item-name" style="width: 9em;">
+								Ritual Name
+							</td>
+							<td class="item-notes">
+								Notes
+							</td>
+							<td class="item-skill" style="width: 3em;">
+								Type
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								Energy Cost
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								Level
+							</td>
+							<td class="item-controls" style="width: 30px;">
+
+							</td>
+						</tr>
+						{{#each items as |item id|}}
+						{{#if (and (eq type "Ritual") (or (eq system.ritualType "charm") (eq system.ritualType "conditionalCharm"))) }}
+						<tr class="item accordion-open" data-item-id="{{item._id}}">
+							<td class="item-image" style="width: 24px; padding: 0 2px">
+								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+							</td>
+							<td class="item-name" style="width: 9em;">
+								{{item.name}}
+							</td>
+							<td class="item-notes">
+								{{item.system.shortNotes}}
+							</td>
+							<td class="item-skill" style="width: 3em; padding-right: 1em;">
+								{{capitalizeFirst item.system.ritualType}}
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								{{item.system.energyCost}}
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								<label for="actor.system.level" class="fa fa-dice-six rollable" data-level="{{item.system.level}}"
+									   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
+								{{item.system.level}}
+							</td>
+							<td class="item-controls" style="width: 30px;">
+								<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+								<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+							</td>
+						</tr>
+						{{/if}}
+						{{/each}}
+					</table>
+
+					<table>
+						<tr>
+							<th colspan="7" style="font-size: larger; text-decoration: underline;">Elixirs</th>
+						</tr>
+						<tr>
+							<td class="item-image" style="width: 24px; padding: 0 2px">
+
+							</td>
+							<td class="item-name" style="width: 9em;">
+								Ritual Name
+							</td>
+							<td class="item-notes">
+								Notes
+							</td>
+							<td class="item-skill" style="width: 3em;">
+								Type
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								Energy Cost
+							</td>
+							<td class="item-skill" style="width: 3em; text-align: center">
+								Level
+							</td>
+							<td class="item-controls" style="width: 30px;">
+
+							</td>
+						</tr>
+						{{#each items as |item id|}}
+						{{#if (and (eq type "Ritual") (eq system.ritualType "elixir")) }}
+						<tr class="item accordion-open" data-item-id="{{item._id}}">
 							<td class="item-image" style="width: 24px; padding: 0 2px">
 								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 							</td>
