--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -54,14 +54,51 @@
                             {{#if (or (eq item.system.ritualType "charm") (eq item.system.ritualType "conditionalCharm")) }}
                             <tr>
                                 <td>
-                                    <label class="resource-label" style="flex: 0.5;">Safe Threshold:</label>
+                                    <label class="resource-label" style="flex: 0.5;">Safe Threshold: </label>
                                     {{item.system.charm.safeThreshold}}
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <label class="resource-label" style="flex: 0.5;">Sale Cost:</label>
-                                    {{item.system.charm.saleCost}}
+                                    <label class="resource-label" style="flex: 0.5;">Character's Mana Contribution: </label>
+                                    {{item.system.charm.actorContribution}}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label class="resource-label" style="flex: 0.5;">Total Safe Threshold: </label>
+                                    {{item.system.charm.totalSafeThreshold}}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label class="resource-label" style="flex: 0.5;">Crafting Roll Modifier (Higher numbers are bad): </label>
+                                    {{item.system.charm.craftingRollMod}} <input type='button' class='makeCraftingRoll' id="{{item.name}}" value='Make Crafting Roll'/>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label class="resource-label" style="flex: 0.5;">Quirk Roll Modifier (Higher numbers are good): </label>
+                                    {{item.system.charm.quirkRollMod}} <input type='button' class='makeQuirkRoll' id="{{item.name}}"  value='Make Quirk Roll'/>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label class="resource-label" style="flex: 0.5;">Charm Availability</label>
+                                    <select name="system.charm.availability">
+                                        {{#select item.system.charm.availability}}
+                                        <option value="0.5">Common (Wards, healing, lucky charms)</option>
+                                        <option value="1">Uncommon</option>
+                                        <option value="2">Rare (Strange, overly specific)</option>
+                                        <option value="2.0">Custom Order</option>
+                                        {{/select}}
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label class="resource-label" style="flex: 0.5;">Sale / Purchase Cost:</label>
+                                    {{item.system.charm.saleCost}} $
                                 </td>
                             </tr>
                             {{/if}}
