Added external mana to charm crafting

--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -72,6 +72,12 @@
                             </tr>
                             <tr>
                                 <td>
+                                    <label class="resource-label" style="flex: 0.5;">Additional Sources Of Mana: </label>
+                                    <input type="number" style="width: 50%" name="system.charm.additionalSourcesOfMana" value="{{item.system.charm.additionalSourcesOfMana}}" data-dtype="Number" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
                                     <label class="resource-label" style="flex: 0.5;">Total Safe Threshold: </label>
                                     {{item.system.charm.totalSafeThreshold}}
                                 </td>
